--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  display: block;
 }
 
 .App-logo {
@@ -35,4 +36,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#searchBox {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  width: 40%;
 }
