--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-.App {
-  text-align: center;
-  display: block;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -39,8 +36,67 @@
 }
 
 #searchBox {
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 100px;
-  width: 40%;
+  width: 100%;
+}
+
+
+.card {
+  text-align: center;
+  margin-top: 50px;
+    width: 100%;
+    padding-top: 10px;
+    height: auto;
+  -webkit-box-shadow: -6px 6px 10px -2px rgba(77,8,35,1);
+  -moz-box-shadow: -6px 6px 10px -2px rgba(77,8,35,1);
+   box-shadow: -5px 5px 8px -2px rgba(77,8,35,1);
+  
+}
+
+a {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  text-decoration: none;
+  color: #282c34;
+}
+
+button {
+  border: none;
+  width: 150px;
+  height: 50px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  -webkit-box-shadow: -4px 4px 10px -2px rgba(77,8,35,1);
+  -moz-box-shadow: -4px 4px 10px -2px rgba(77,8,35,1);
+   box-shadow: -4px 4px 8px -2px rgba(77,8,35,1);
+}
+
+.dismissbtn {
+  color: white;
+  background-color: rgb(194, 134, 23);
+  -webkit-box-shadow: -4px 4px 10px -2px rgba(77,8,35,1);
+  -moz-box-shadow: -4px 4px 10px -2px rgba(77,8,35,1);
+   box-shadow: -4px 4px 8px -2px rgba(77,8,35,1);
+}
+
+#meta {
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-evenly;
+}
+
+#searchBox {
+  margin-top: 100px;
+  width: 100%;
+  display: grid;
+}
+
+#more {
+  margin-top: 30px;
+  width: 100%;
+  display: grid;
+}
+
+#more > button {
+  width: 100%;
 }
